force-app/main/default/objects/ZP_User__c/ZP_User__c.object-meta.xml
<CustomObject>
    <label>ZP User</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>ZP User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZP Users</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>