force-app/main/default/objects/ZP_User__c/fields/Accountant_Referral_Token__c.field-meta.xml
<CustomField>
    <fullName>Accountant_Referral_Token__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Accountant Referral Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>