force-app/main/default/objects/ZP_User__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ZP Users</relationshipLabel>
    <relationshipName>ZP_Users</relationshipName>
    <type>Lookup</type>
</CustomField>