force-app/main/default/objects/ZP_User__c/fields/Created_At__c.field-meta.xml
<CustomField>
    <fullName>Created_At__c</fullName>
    <label>Created At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>