force-app/main/default/objects/ZP_User__c/fields/Current_Sign_In_At__c.field-meta.xml
<CustomField>
    <fullName>Current_Sign_In_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Sign In At</label>
    <type>DateTime</type>
</CustomField>