force-app/main/default/objects/ZP_User__c/fields/External_Key__c.field-meta.xml
<CustomField>
    <fullName>External_Key__c</fullName>
    <description>External concatenation, lowercase, no spaces, hyphen delimited  

database - model name - record id

e.g. zp-user-0029312431</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>