force-app/main/default/objects/ZP_User__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>First Name sent from in App, derived from the &quot;best&quot; zp user role First Name as defined by Eng.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>First Name sent from in App, derived from the &quot;best&quot; zp user role First Name as defined by Eng.</inlineHelpText>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>