force-app/main/default/objects/ZP_User__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Last Name sent from in App, derived from the &quot;best&quot; zp user role Last Name as defined by Eng.</description>
    <inlineHelpText>Last Name sent from in App, derived from the &quot;best&quot; zp user role Last Name as defined by Eng.</inlineHelpText>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>