force-app/main/default/objects/ZP_User__c/fields/Last_Sign_In_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Sign_In_At__c</fullName>
    <label>Last Sign In At</label>
    <type>DateTime</type>
</CustomField>