force-app/main/default/objects/ZP_User__c/fields/Mulesoft_Bulk_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Mulesoft_Bulk_Job_Id__c</fullName>
    <description>this is mapped to mule_bulk_jobID in integration layer</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Mulesoft Bulk Job Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>