force-app/main/default/objects/ZP_User__c/fields/Partner_Referral_Token__c.field-meta.xml
<CustomField>
    <fullName>Partner_Referral_Token__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Partner Referral Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>