force-app/main/default/objects/ZP_User__c/fields/Preferred_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Preferred_First_Name__c</fullName>
    <description>Preferred First Name sent from in App, derived from the &quot;best&quot; zp user role Preferred First Name as defined by Eng.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Preferred First Name sent from in App, derived from the &quot;best&quot; zp user role Preferred First Name as defined by Eng.</inlineHelpText>
    <label>Preferred First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>