force-app/main/default/objects/ZP_User__c/fields/Previous_Email__c.field-meta.xml
<CustomField>
    <fullName>Previous_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Previous Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>