force-app/main/default/objects/ZP_User__c/fields/Referral_Token__c.field-meta.xml
<CustomField>
    <fullName>Referral_Token__c</fullName>
    <externalId>true</externalId>
    <label>Referral Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>