force-app/main/default/objects/ZP_User__c/fields/Updated_At__c.field-meta.xml
<CustomField>
    <fullName>Updated_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Updated At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>