force-app/main/default/objects/ZP_User__c/fields/User_Referral_Reward__c.field-meta.xml
<CustomField>
    <fullName>User_Referral_Reward__c</fullName>
    <description>Passed from referrals table to represent the incentive given to users who refer new leads</description>
    <encryptionScheme>None</encryptionScheme>
    <label>User Referral Reward</label>
    <length>255</length>
    <type>Text</type>
</CustomField>